# multiagent

./: .gitignore  README.md  agents.py  architecture.mermaid  architecture_mermaid.md  domains.py  main_orchestrator.py  orchestrator_native_subagents.py  parser.py  pyproject.toml  schema.py  shared_tools.py  task.md  tools.py
.claude/skills/conformance-common/: SKILL.md
.claude/skills/data-review/: SKILL.md
.claude/skills/governance-evaluation/: SKILL.md
.claude/skills/resilient-review/: SKILL.md
.claude/skills/security-review/: SKILL.md
agents/data/: examples.md  guidelines.md  tools.py
agents/resilient/: examples.md  guidelines.md  tools.py
agents/security/: examples.md  guidelines.md  tools.py
documents/: source.md
guidelines/data_movement/: examples.md  guideline.md
guidelines/data_movement/v1/: examples.md  guideline.md
guidelines/resilience/: examples.md
guidelines/resilience/v1/: examples.md  guideline.md
guidelines/security/v1/: examples.md  guideline.md
results/: source.json
