[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-governance"
version = "0.1.0"
description = "SAD governance-evaluation framework (Data Movement / Security / Resilience), model-driven on the Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "multiAgent" }]
keywords = ["claude", "agent-sdk", "governance", "multi-agent", "sad", "architecture-review"]

# Runtime dependencies (this file is the single source of truth).
dependencies = [
    "claude-agent-sdk>=0.1.49",
]

[project.optional-dependencies]
# Dev tooling: `pip install -e ".[dev]"`
dev = [
    "ruff>=0.6",
]

[project.scripts]
# After `pip install -e .`:  governance-review  [path/to/sad.md]
governance-review = "main_orchestrator:run"

[project.urls]
Homepage = "https://github.com/qimike/multiagent"

# ---------------------------------------------------------------------------
# Packaging
# ---------------------------------------------------------------------------
# The project is a set of top-level modules (it reads guidelines/ and documents/ from
# the source tree at runtime), so we list py-modules explicitly and run it as an
# editable install (`pip install -e .`).
[tool.setuptools]
py-modules = [
    "main_orchestrator",
    "agents",
    "schema",
    "tools",
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]
